another part of refactoring

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pomahajme",
+  "name": "Pomahajme",
   "version": "1.0.0",
   "description": "Pomahajme.sk frontend",
   "author": "Martin Turoci",
