--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.2.2",
     "@nuxtjs/proxy": "^1.3.3",
     "node-sass": "^4.12.0",
     "prettier": "1.19.1",
